# cstring-lite

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: cpp-linter.yml  examples-multi-platform.yml  linux.yml  macos.yml  tests-multi-platform.yml  windows.yml
examples/: CMakeLists.txt  main.cpp  one.cpp  two.cpp
examples/include/: result.hpp
include/tuli/: cstring.hpp  cstring_view.hpp
tests/: CMakeLists.txt  cstring.cpp  cstring_view.cpp
tests/include/: string_utils.hpp
